--- a/header.html
+++ b/header.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
     <header>
-        <h1>BLUGH</h1>
+        <nav>
+            <div class="logo">
+                <img src="Title.png">
+            </div>
+            <div class="nav">
+                <ul>
+                    <li><a href="#" class="nav-link">Madlib Activity</a></li>
+                    <li><a href="#" class="nav-link">Button 2</a></li>
+                    <li><a href="#" class="nav-link"><span class="btn">Actual Button</span></a></li>
+                </ul>
+            </div>
+        </nav>  
     </header>
